--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* google fonts api */
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Poppins&family=Roboto:wght@300;400;500;700&display=swap");
+
+/* css color variables */
+:root {
+  --primary-blue: #5651e5;
+  --primary-light: #709dff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* custom class for icons */
+
+@layer base {
+  body {
+    @apply font-[Poppins];
+  }
+  li {
+    @apply p-4 font-semibold  border-b border-gray-300 hover:text-[var(--primary-blue)];
+  }
+  h1 {
+    @apply text-3xl md:text-4xl font-bold;
+  }
+  h2 {
+    @apply text-3xl font-bold;
+  }
+  h3 {
+    @apply text-xl font-bold;
+  }
+
+  button {
+    @apply p-3 border bg-gradient-to-r from-[var(--primary-blue)] to-[var(--primary-light)]  text-white rounded-md;
+  }
+  .icon {
+    @apply text-2xl cursor-pointer fill-[var(--primary-blue)];
+  }
 }
